Fix wrong color on flash notice

--- a/app/assets/stylesheets/_flash.sass
+++ b/app/assets/stylesheets/_flash.sass
@@ -11,5 +11,5 @@
   color: $alert-text
 
 .notice
-  background: $alert
+  background: $notice
   color: $notice-text
